Fix selection overlap bug

--- a/docs/app/docs-infra/hooks/use-code-window/demos/CollapsibleContent.module.css
+++ b/docs/app/docs-infra/hooks/use-code-window/demos/CollapsibleContent.module.css
@@ -266,6 +266,7 @@ pre.codeBlock[data-scrollbar-gutter='expand-to'] :global(code) {
 
 .codeBlock :global(.frame[data-lined] .line) {
   display: block;
+  position: relative;
   white-space: pre;
   line-height: initial;
 }
